Converted footer and header to utf-8 with unix newlines

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,8 +12,8 @@
 	</script>
 	<link rel="pingback" href="http://www.kuudesmauste.fi/xmlrpc.php">
 <meta name="robots" content="noindex,nofollow">
-<link rel="alternate" type="application/rss+xml" title="Kuudes mauste » Feed" href="http://www.kuudesmauste.fi/feed/">
-<link rel="alternate" type="application/rss+xml" title="Kuudes mauste » Comments Feed" href="http://www.kuudesmauste.fi/comments/feed/">
+<link rel="alternate" type="application/rss+xml" title="Kuudes mauste Â» Feed" href="http://www.kuudesmauste.fi/feed/">
+<link rel="alternate" type="application/rss+xml" title="Kuudes mauste Â» Comments Feed" href="http://www.kuudesmauste.fi/comments/feed/">
 <link rel="stylesheet" id="the-erudite-css" href="kuudesmauste_files/erudite.css" type="text/css" media="all">
 <script type="text/javascript" src="kuudesmauste_files/jquery.js"></script>
 <link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://www.kuudesmauste.fi/xmlrpc.php?rsd">
@@ -31,7 +31,7 @@
 		</div><!--  #header -->
 
 		<div style="display: none;" id="access" role="navigation">
-			<div class="skip-link"><a href="#content" title="Oikaise sisältöön">Oikaise sisältöön</a></div>
+			<div class="skip-link"><a href="#content" title="Oikaise sisÃ¤ltÃ¶Ã¶n">Oikaise sisÃ¤ltÃ¶Ã¶n</a></div>
 			<div id="menu"><ul><li class="page_item page-item-131"><a href="http://www.kuudesmauste.fi/kuudesmauste/">Blogista</a></li><li class="page_item page-item-21"><a href="http://www.kuudesmauste.fi/ferrix/">Ferrix</a></li><li class="page_item page-item-35"><a href="http://www.kuudesmauste.fi/mikael/">Mikael</a></li></ul></div>
 		</div><!-- #access -->
 
