--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -263,53 +263,41 @@ Risottorunko
 	</div><!-- #container -->
 
 
-	<div id="footer-wrap">
-		<div id="footer-wrap-inner">
-			<div id="primary" class="footer">
-				<ul class="xoxo">
-		
-					<li id="about-sidebar">
-						<h3>Tietoja</h3>
-						<div>
-						<p>Kuudes mauste on blogi ruuasta. Kirjoittajat ovat Ferrix ja Mikael. Emme ole ammattikokkeja, mutta viihdymme keittiössä ja ruokapöydässä.</p>
-						</div>
-					</li>
-					
-					<li id="pages">
-						<h3>Sivut</h3>
-						<ul>
-		<li class="page_item page-item-131"><a href="/kuudesmauste/">Blogista</a></li>
-<li class="page_item page-item-21"><a href="/ferrix/">Ferrix</a></li>
-<li class="page_item page-item-35"><a href="/mikael/">Mikael</a></li>
-						</ul>
-					</li>
-								
-						</ul>
-			</div><!-- #primary .sidebar -->
-
-		<div id="secondary" class="footer">
-			<ul class="xoxo">
-	
-				<li id="categories">
-					<h3>Luokat</h3>
-					<ul>
-		<li class="cat-item cat-item-56"><a href="/luokka/blogi/" title="View all posts filed under Kuudes mauste">Kuudes mauste</a>
-</li>
-	<li class="cat-item cat-item-4"><a href="/luokka/ruuanlaitto/" title="Miten me kokkaamme">Ruuanlaitto</a>
-<ul class='children'>
-	<li class="cat-item cat-item-7"><a href="/luokka/ruuanlaitto/reseptit/" title="View all posts filed under Reseptit">Reseptit</a>
-</li>
-	<li class="cat-item cat-item-5"><a href="/luokka/ruuanlaitto/valineet/" title="Ruoanlaiton välineet ja niihin liittyvät asiat">Välineet</a>
-</li>
-</ul>
-</li>
-	<li class="cat-item cat-item-6"><a href="/luokka/viinit/" title="View all posts filed under Viinit">Viinit</a>
-</li>
- 
-
+    <div id="footer-wrap">
+        <div id="footer-wrap-inner">
+            <div id="primary" class="footer">
+                <ul class="xoxo">
+                    <li id="about-sidebar">
+                        <h3>Tietoja</h3>
+                        <p>Kuudes mauste on blogi ruuasta. Kirjoittajat ovat Ferrix ja Mikael. Emme ole ammattikokkeja, mutta viihdymme keittiössä ja ruokapöydässä.</p>
+                    </li>
+                    <li id="pages">
+                        <h3>Sivut</h3>
+                        <ul>
+                            <li class="page_item"><a href="/kuudesmauste/">Blogista</a></li>
+                            <li class="page_item"><a href="/ferrix/">Ferrix</a></li>
+                            <li class="page_item"><a href="/mikael/">Mikael</a></li>
                         </ul>
                     </li>
+                </ul>
+            </div><!-- #primary .sidebar -->
 
+            <div id="secondary" class="footer">
+                <ul class="xoxo">
+                    <li id="categories">
+                        <h3>Luokat</h3>
+                        <ul>
+                            <li class="cat-item"><a href="/luokka/blogi/" title="View all posts filed under Kuudes mauste">Kuudes mauste</a></li>
+                            <li class="cat-item cat-item-4"><a href="/luokka/ruuanlaitto/" title="Miten me kokkaamme">Ruuanlaitto</a>
+                                <ul class='children'>
+                                    <li class="cat-item cat-item-7"><a href="/luokka/ruuanlaitto/reseptit/" title="View all posts filed under Reseptit">Reseptit</a></li>
+                                    <li class="cat-item cat-item-5"><a href="/luokka/ruuanlaitto/valineet/" title="Ruoanlaiton välineet ja niihin liittyvät asiat">Välineet</a></li>
+
+                                </ul>
+                            </li>
+                            <li class="cat-item cat-item-6"><a href="/luokka/viinit/" title="View all posts filed under Viinit">Viinit</a></li>
+                        </ul>
+                    </li>
                     <li id="archives">
                         <h3>Arkisto</h3>
                         <ul>
