--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
-<html dir="ltr" class="js" lang="fi-FI"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<meta charset="UTF-8">
-	<title>Kuudes mauste</title>
-	<meta name="profile" content="http://gmpg.org/xfn/11">
-	<!--[if lte IE 7 ]> <link rel="stylesheet" href="http://www.kuudesmauste.fi/wp-content/themes/the-erudite/css/ie7.css" type="text/css"> <![endif]-->
-	<!--[if IE 8 ]> <link rel="stylesheet" href="http://www.kuudesmauste.fi/wp-content/themes/the-erudite/css/ie8.css" type="text/css"> <![endif]-->
-	<script>
-		var erdt = {"More":"<span>\u2193<\/span> Jatka lukemista","Less":"<span>\u2191<\/span> Piilota","Info":"&#x2193; Lis\u00e4tietoja","MenuShow":"<span>\u2193<\/span> Valikko","MenuHide":"<span>\u2191<\/span> Piilota","DisableKeepReading":false,"DisableHide":false};
-		(function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement);
-	</script>
-	<link rel="pingback" href="http://www.kuudesmauste.fi/xmlrpc.php">
-<meta name="robots" content="noindex,nofollow">
-<link rel="alternate" type="application/rss+xml" title="Kuudes mauste » Feed" href="http://www.kuudesmauste.fi/feed/">
-<link rel="alternate" type="application/rss+xml" title="Kuudes mauste » Comments Feed" href="http://www.kuudesmauste.fi/comments/feed/">
-<link rel="stylesheet" id="the-erudite-css" href="kuudesmauste_files/erudite.css" type="text/css" media="all">
-<script type="text/javascript" src="kuudesmauste_files/jquery.js"></script>
-<link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://www.kuudesmauste.fi/xmlrpc.php?rsd">
-<link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://www.kuudesmauste.fi/wp-includes/wlwmanifest.xml"> 
-<meta name="generator" content="WordPress 3.4">
+<html dir="ltr" lang="fi-FI" class="no-js">
+<head>
+    <meta charset="UTF-8" />
+    <title>{{ page.title }} &#8211; {{ site.title }}</title>
+    <meta name="profile" content="http://gmpg.org/xfn/11" />
+    <!--[if lte IE 7 ]> <link rel="stylesheet" href="/themes/the-erudite/css/ie7.css" type="text/css"> <![endif]-->
+    <!--[if IE 8 ]> <link rel="stylesheet" href="/themes/the-erudite/css/ie8.css" type="text/css"> <![endif]-->
+    <script>
+        var erdt = {"More":"<span>\u2193<\/span> Jatka lukemista","Less":"<span>\u2191<\/span> Piilota","Info":"&#x2193; Lis\u00e4tietoja","MenuShow":"<span>\u2193<\/span> Valikko","MenuHide":"<span>\u2191<\/span> Piilota","DisableKeepReading":false,"DisableHide":false};
+        (function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement);
+    </script>
+<meta name='robots' content='noindex,nofollow' />
+<link rel="alternate" type="application/rss+xml" title="{{ site.title }} &raquo; Feed" href="/feed/" />
+<link rel="alternate" type="application/rss+xml" title="{{ site.title }} &raquo; Comments Feed" href="/comments/feed/" />
+<link rel="alternate" type="application/rss+xml" title="{{ site.title }} &raquo; {{ page.title }} Comments Feed" href="feed/" />
+<link rel='stylesheet' id='the-erudite-css'  href='/themes/the-erudite/css/erudite.css' type='text/css' media='all' />
+<script type='text/javascript' src='/js/comment-reply.js'></script>
+<script type='text/javascript' src='/js/jquery/jquery.js'></script>
+<link rel='prev' title='Viimeisimmät punaviinit, osa I' href='/2010/09/25/viimeisimmat-punaviinit-osa-i/' />
+<link rel='next' title='Purjo-perunasosekeitto' href='/2010/10/27/purjo-perunasosekeitto/' />
+<meta name="generator" content="Jekyll" />
+<link rel='canonical' href='{{ page.url }}' />
 </head>
-<body class="home blog first-page hiding set-in-constantia mozilla">
+<body class="{% if page.layout == "post" %}single{% else %}page{% endif %} hiding">
 
 <div id="wrapper" class="hfeed">
-	
-	<div id="header-wrap">
-		<div id="header" role="banner">
-			<h1 id="blog-title"><span><a href="http://www.kuudesmauste.fi/" title="Kuudes mauste" rel="home">Kuudes mauste</a></span></h1>
-			<div id="blog-description">I see hungry people</div>
-		</div><!--  #header -->
+    <div id="header-wrap">
+        <div id="header" role="banner">
+            <h1 id="blog-title"><span><a href="/" title="{{ site.title }}" rel="home">{{ site.title }}</a></span></h1>
+            <div id="blog-description">{{ site.tagline }}</div>
+        </div><!--  #header -->
 
-		<div style="display: none;" id="access" role="navigation">
-			<div class="skip-link"><a href="#content" title="Oikaise sisältöön">Oikaise sisältöön</a></div>
-			<div id="menu"><ul><li class="page_item page-item-131"><a href="http://www.kuudesmauste.fi/kuudesmauste/">Blogista</a></li><li class="page_item page-item-21"><a href="http://www.kuudesmauste.fi/ferrix/">Ferrix</a></li><li class="page_item page-item-35"><a href="http://www.kuudesmauste.fi/mikael/">Mikael</a></li></ul></div>
-		</div><!-- #access -->
+        <div id="access" role="navigation">
+            <div class="skip-link"><a href="#content" title="Oikaise sisältöön">Oikaise sisältöön</a></div>
+            <div id="menu"><ul><li class="page_item"><a href="/kuudesmauste/">Blogista</a></li><li class="page_item"><a href="/ferrix/">Ferrix</a></li><li class="page_item"><a href="/mikael/">Mikael</a></li></ul></div>
+        </div><!-- #access -->
 
-	</div><div id="menu-toggle"><div class="closed"><span>?</span> Valikko</div></div><!--  #header-wrap -->
-	<div id="container">
-		<div id="content" role="main">
+    </div><!--  #header-wrap -->
+    <div id="container">
+        <div id="content" role="main">
+            <div class="{{ page.layout }}">
+                <h2 class="entry-title">{{ page.title }}</h2>
+                <div class="entry-content">
