--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,53 +1,9 @@
 ---
 theme: erudite
 ---
-<!DOCTYPE html>
-<html dir="ltr" lang="fi-FI" class="no-js">
-<head>
-    <meta charset="UTF-8" />
-    <title>{{ page.title }} &#8211; {{ site.title }}</title>
-    <meta name="profile" content="http://gmpg.org/xfn/11" />
-    <!--[if lte IE 7 ]> <link rel="stylesheet" href="/themes/the-erudite/css/ie7.css" type="text/css"> <![endif]-->
-    <!--[if IE 8 ]> <link rel="stylesheet" href="/themes/the-erudite/css/ie8.css" type="text/css"> <![endif]-->
-    <script>
-        var erdt = {"More":"<span>\u2193<\/span> Jatka lukemista","Less":"<span>\u2191<\/span> Piilota","Info":"&#x2193; Lis\u00e4tietoja","MenuShow":"<span>\u2193<\/span> Valikko","MenuHide":"<span>\u2191<\/span> Piilota","DisableKeepReading":false,"DisableHide":false};
-        (function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement);
-    </script>
-<meta name='robots' content='noindex,nofollow' />
-<link rel="alternate" type="application/rss+xml" title="{{ site.title }} &raquo; Feed" href="/feed/" />
-<link rel="alternate" type="application/rss+xml" title="{{ site.title }} &raquo; Comments Feed" href="/comments/feed/" />
-<link rel="alternate" type="application/rss+xml" title="{{ site.title }} &raquo; {{ page.title }} Comments Feed" href="feed/" />
-<link rel='stylesheet' id='the-erudite-css'  href='/themes/the-erudite/css/erudite.css' type='text/css' media='all' />
-<script type='text/javascript' src='/js/comment-reply.js'></script>
-<script type='text/javascript' src='/js/jquery/jquery.js'></script>
-<meta name="generator" content="Jekyll" />
-<link rel='canonical' href='{{ page.url }}' />
-</head>
-<body class="page hiding">
-
-<div id="wrapper" class="hfeed">
-
-    <div id="header-wrap">
-        <div id="header" role="banner">
-            <h1 id="blog-title"><span><a href="/" title="{{ site.title }}" rel="home">{{ site.title }}</a></span></h1>
-            <div id="blog-description">{{ site.tagline }}</div>
-        </div><!--  #header -->
-
-        <div id="access" role="navigation">
-            <div class="skip-link"><a href="#content" title="Oikaise sisältöön">Oikaise sisältöön</a></div>
-            <div id="menu"><ul><li class="page_item"><a href="/kuudesmauste/">Blogista</a></li><li class="page_item"><a href="/ferrix/">Ferrix</a></li><li class="page_item"><a href="/mikael/">Mikael</a></li></ul></div>
-        </div><!-- #access -->
-
-    </div><!--  #header-wrap -->
-    <div id="container">
-        <div id="content" role="main">
-            <div class="{{ page.layout }}">
-                <h2 class="entry-title">{{ page.title }}</h2>
-                <div class="entry-content">
+{% include header.html %}
                     {{ content }}
                 </div>
             </div><!-- .post -->
-        </div><!-- #content -->
-    </div><!-- #container -->
 
 {% include footer.html %}
