--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
 <meta name="generator" content="Jekyll" />
 <link rel="canonical" href="{{ page.url }}" />
 </head>
-<body class="{% if page.layout == "post" %}single{% elsif page.layout == "home" %}home first-page{% else %}page{% endif %} hiding">
+<body class="{% if page.layout == "post" %}single{% elsif page.layout == "home" and paginator.page == 1 %}home first-page{% elsif page.layout == "home" and paginator.page != 1 %}home paged{% else %}page{% endif %} hiding">
 
 <div id="wrapper" class="hfeed">
     <div id="header-wrap">
