--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
-theme: erudite
+theme: the-erudite
 ---
-{% include header.html %}
+{% include the-erudite/header.html %}
             <div class="{{ page.layout }}">
                 <h2 class="entry-title">{{ page.title }}</h2>
                 <div class="entry-content">
@@ -48,4 +48,4 @@ theme: erudite
 
             </div><!-- #comments -->
 
-{% include footer.html %}
+{% include the-erudite/footer.html %}
