--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
-theme: erudite
+theme: the-erudite
 ---
-{% include header.html %}
+{% include the-erudite/header.html %}
             <div class="{{ page.layout }}">
                 <h2 class="entry-title">{{ page.title }}</h2>
                 <div class="entry-content">
@@ -9,4 +9,4 @@ theme: erudite
                 </div>
             </div><!-- .post -->
 
-{% include footer.html %}
+{% include the-erudite/footer.html %}
