Move entry-meta block to a template
There was repetition in the meta bit of the page. Now there is an
includable called meta. It expects a page or post to be in `node`
variable which it cleans up at the end.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,16 +12,8 @@ theme: the-erudite
                     <p class="more-link"><a href="{{ post.url }}" title="Lue lisää &lsquo;{{ post.title }}&rsquo;">Lue lisää <span class="meta-nav">&rarr;</span></a></p>{% endif %}
                     <hr />
                 </div>
-                <div class="entry-meta">
-                    {% include comment-count %}
-                    <span class="entry-date"><abbr class="published" title="{{ post.date | date: "%Y-%m-%d" }}">{{ post.date | date: "%d.%m.%Y" }}</abbr></span>
-                    <span class="meta-sep">|</span>
-                    <span class="author vcard">Kirjoittanut <a href="/author/{{ post.author | downcase }}/" title="Kirjoittajan {{ post.author }} julkaisut">{{ post.author }}</a></span>
-                    <span class="meta-sep">|</span>
-                    <span class="cat-links">Julkaistu{% for category in post.categories %} <a href="/luokka/ruuanlaitto/reseptit/" title="Näytä kategoria Reseptit" rel="category tag">{{ category }}</a>{% endfor %}</span>
-                    <span class="meta-sep">|</span>
-                    <span class="comments-link"><a href="{{ post.url }}#disqus_thread" title="Comment on {{ post.title }}">kommentoi</a></span>
-                </div>
+                {% assign node = post %}
+                {% include meta %}
             </div><!-- .post -->
             {% endfor %}
 
