--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,16 +7,8 @@ theme: the-erudite
                 <div class="entry-content">
                     {{ content }}
                 </div>
-                <div class="entry-meta">
-                    {% include comment-count %}
-                    <span class="entry-date"><abbr class="published" title="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date: "%d.%m.%Y" }}</abbr></span>
-                    <span class="meta-sep">|</span>
-                    <span class="author vcard">Kirjoittanut <a href="/author/{{ page.author | downcase }}/" title="Kirjoittajan {{ page.author }} julkaisut">{{ page.author }}</a></span>
-                    <span class="meta-sep">|</span>
-                    <span class="cat-links">Julkaistu{% for category in page.categories %} <a href="/luokka/ruuanlaitto/{{ category | replace: 'ä','a' | replace: 'ö','o' | downcase | handle }}/" title="Näytä kategoria {{ category }}" rel="category tag">{{ category }}</a>{% unless forloop.last %},{% endunless %}{% endfor %}</span>
-                    <span class="meta-sep">|</span>
-                    <span class="comments-link"><a href="#disqus_thread" title="Comment on {{ page.title }}">kommentoi</a></span>
-                </div>
+                {% assign node = page %}
+                {% include meta %}
             </div><!-- .post -->
 
             <div id="nav-below" class="navigation">
@@ -25,6 +17,5 @@ theme: the-erudite
             </div>
 
             {% include comments %}
-
 
 {% include the-erudite/footer.html %}
