Move meta under erudite
The entry meta is an essential part of the erudite layout. Move it
to the respective place

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ theme: the-erudite
                     <hr />
                 </div>
                 {% assign node = post %}
-                {% include meta %}
+                {% include the-erudite/meta %}
             </div><!-- .post -->
             {% endfor %}
 
