--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ theme: the-erudite
                     {{ content }}
                 </div>
                 {% assign node = page %}
-                {% include meta %}
+                {% include the-erudite/meta %}
             </div><!-- .post -->
 
             <div id="nav-below" class="navigation">
